stoping the count if event reamining time is less than zero and showing a text if event has ended

--- a/applications/events/templates/events/event_details.html
+++ b/applications/events/templates/events/event_details.html
@@ -43,7 +43,7 @@
     {% include "leaderboard/components/left_header.html" %}
     {% include "leaderboard/components/right_header.html" %}
     {% include "leaderboard/components/teams_position.html" %}
-    {% include "leaderboard/components/submission_modal.html" %}
+    {% comment %} {% include "leaderboard/components/submission_modal.html" %} {% endcomment %}
     {% include "leaderboard/components/submissions_sent_modal.html" %}
 
     <script>
