--- a/applications/events/templates/events/event_details.html
+++ b/applications/events/templates/events/event_details.html
@@ -12,13 +12,21 @@
                 <div class="ui ten wide column segment">
                     <leftheader></leftheader>
                     <div class="ui four item small borderless menu header_menu">
-                        <a href="{% url 'admin:index' %}" class="item">
-                            Administração</a>
-                        {% comment %} <a class="item">Placar</a> {% endcomment %}
-                        {% comment %} <a class="item">Dashboard</a> {% endcomment %}
-                        <a class="item" @click="showModal('submission_modal')">Submeter</a>
-                        <a class="item" @click="showModal('submissions_sent_modal')">Histórico</a>
-                        <a href="{% url 'logout' %}" class="item">Logout</a>
+                        {% if request.user.is_anonymous == True %}
+                            <a href="{% url 'events_running' %}" class="item">Outros eventos</a>
+                            <a class="item">Questões</a>
+                        {% elif request.user.is_anonymous == False %}
+                            <a class="item" @click="showModal('submission_modal')">Submeter</a>
+                            <a class="item" @click="showModal('submissions_sent_modal')">Histórico</a>
+                            <a class="item">Questões</a>
+                            <a href="{% url 'logout' %}" class="item">Logout</a>
+                        {% else %}
+                            <a href="{% url 'admin:index' %}" class="item">Administração</a>
+                            <a class="item" @click="showModal('submissions_sent_modal')">Histórico Geral</a>
+                            <a  class="item">Questões</a>
+                            <a href="{% url 'logout' %}" class="item">Logout</a>
+                        {% endif %}
+                        {{ request.user.is_admin }}
                     </div>
                 </div>
 
