showing all events ordered by active ones and refreshing the teams position component every 10 seconds

--- a/applications/leaderboard/templates/leaderboard/components/teams_position.html
+++ b/applications/leaderboard/templates/leaderboard/components/teams_position.html
@@ -11,48 +11,56 @@
             } 
         },
         mounted() {
-            let endpoint = 'leaderboard-teams/'
-            if (this.is_admin == 'True') {
-                endpoint = 'final_leaderboard/';
-            }
-            if (!(this.event_id)) {
-                this.event_id = '{{ request.path_info }}'.toString()
-                this.event_id = (this.event_id.split('/').slice(2,3)).toString()
-                
-            }
-            axios.get('http://localhost:8000/api/accounts/'+endpoint+this.event_id)
-                .then(response => {
-                    // Parse the response data to extract the questions
-                    this.teams = response.data.teams
-                })
-                .catch(error => {
-                    console.log(error)
-            })
-            axios.get('http://localhost:8000/api/events/'+this.event_id)
-                .then(response => {
-                    // Parse the response data to extract the questions
-                    this.total_questions = response.data.event_total_questions
-                })
-                .catch(error => {
-                    console.log(error)
-            })
+            this.loadData();
+            setInterval(() => {
+                this.loadData();
+            }, 10000);
         },
         delimiters: ['[[', ']]'],
-        methods: {},
-        template: `
-        <table class="ui table">
-            <thead>
-                <tr>
-                    <td>Equipe</td>
-                    <td>Questões</td>
-                    <td>Total</td>
-                </tr>
-            </thead>
+        methods: {
+            loadData() {
+                let endpoint = 'leaderboard-teams/'
+                if (this.is_admin == 'True') {
+                    endpoint = 'final-leaderboard/';
+                }
 
-            <tbody>
-                <team_info v-for="item in teams" :key="item" :team="item" :total_questions="total_questions"></team_info>
-            </tbody>
-        </table>
+                if (!(this.event_id)) {
+                    this.event_id = '{{ request.path_info }}'.toString()
+                    this.event_id = (this.event_id.split('/').slice(2,3)).toString()
+                }
+
+                axios.get('http://localhost:8000/api/accounts/'+endpoint+this.event_id)
+                    .then(response => {
+                        // Parse the response data to extract the questions
+                        this.teams = response.data.teams
+                    })
+                    .catch(error => {
+                        console.log(error)
+                })
+                axios.get('http://localhost:8000/api/events/'+this.event_id)
+                    .then(response => {
+                        // Parse the response data to extract the questions
+                        this.total_questions = response.data.event_total_questions
+                    })
+                    .catch(error => {
+                        console.log(error)
+                })
+            }
+        },
+        template: `
+            <table class="ui table">
+                <thead>
+                    <tr>
+                        <td>Equipe</td>
+                        <td>Questões</td>
+                        <td>Total</td>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <team_info v-for="item in teams" :key="item" :team="item" :total_questions="total_questions"></team_info>
+                </tbody>
+            </table>
         `
     })
 </script>
