--- a/applications/leaderboard/templates/leaderboard/components/left_header.html
+++ b/applications/leaderboard/templates/leaderboard/components/left_header.html
@@ -7,7 +7,8 @@
             event_id: '{{ request.user.team.event.id }}',
             event_name: '',
             event_institution: '',
-            logo: null
+            team_logo: '{{ request.user.team.team_image.url }}',
+            team_name: '{{ request.user.team.name }}'
         }
     },
     mounted() {
@@ -33,19 +34,21 @@
         <div class="row">
             <div class="ten wide column">
                 <h1 class="ui grey header">
-                    [[ event_name ]]
-                    <br>
-                    <small>
-                        [[ event_institution ]]
-                    </small>
+                    [[ event_name ]] - [[ event_institution ]]
+                    <br><br>
+                    [[ team_name ]]
                 </h1>
             </div>
 
             <div class="six wide column">
                 <div class="ui right aligned basic segment">
                     <img class="ui small right floated image"
-                        :src="logo ? logo : '{% static 'images/uniararas.png' %}'">
-                </div>
+                        v-if="team_logo"
+                        :src="team_logo">
+                    <img class="ui small right floated image"
+                        v-else
+                        src="{% static 'images/uniararas.png' %}">
+                </div>  
             </div>
         </div>
     </div>
