add login button on events_running page

--- a/applications/events/templates/events/events_running.html
+++ b/applications/events/templates/events/events_running.html
@@ -11,7 +11,12 @@
         <div class="four wide column"></div>
         <div class="eight wide column">
             <div class="ui segment" id="events_list">
-                <h1 class="ui grey dividing header">Eventos em andamento</h1>
+                <h1 class="ui grey dividing header">
+                    <form action="{% url 'login' %}">
+                        Eventos em andamento
+                        <input type="submit" class="ui right floated blue button" value="Login" />
+                    </form>
+                </h1>
                 {% if events %}
                     <table class="ui small selectable table">
                         <thead>
