--- a/applications/leaderboard/templates/leaderboard/components/left_header.html
+++ b/applications/leaderboard/templates/leaderboard/components/left_header.html
@@ -7,7 +7,7 @@
             event_id: '{{ request.user.team.event.id }}',
             event_name: '',
             event_institution: '',
-            team_logo: '{{ request.user.team.team_image.url }}',
+            team_logo: '',
             team_name: '{{ request.user.team.name }}'
         }
     },
