creating submission modal and changes on timer and relative time display

--- a/applications/events/templates/events/event_details.html
+++ b/applications/events/templates/events/event_details.html
@@ -51,7 +51,7 @@
     {% include "leaderboard/components/left_header.html" %}
     {% include "leaderboard/components/right_header.html" %}
     {% include "leaderboard/components/teams_position.html" %}
-    {% comment %} {% include "leaderboard/components/submission_modal.html" %} {% endcomment %}
+    {% include "leaderboard/components/submission_modal.html" %}
     {% include "leaderboard/components/submissions_sent_modal.html" %}
     {% include "leaderboard/components/all_submissions_sent_modal.html" %}
 
