--- a/applications/leaderboard/templates/leaderboard/components/team_info.html
+++ b/applications/leaderboard/templates/leaderboard/components/team_info.html
@@ -26,7 +26,7 @@
                     </div>
                  </div>
             </td>
-            <td class="collapsing">[[ team.formated_time ]]([[ team.penalties ]])</td>
+            <td class="collapsing">[[ (team.formated_time/60).toFixed(0) ]]([[ team.penalties ]])</td>
         </tr>
         `
     })
