changes on requirements and template little template adjustments

--- a/applications/accounts/templates/accounts/login.html
+++ b/applications/accounts/templates/accounts/login.html
@@ -24,6 +24,7 @@
                                 <i class="right arrow icon"></i>
                             </button>
                         </div>
+                        <a href="{% url 'events_running' %}">Visualizar todos os eventos</a>
                     </form>
 
                 </div>
