final adjustments before presentation

--- a/applications/leaderboard/templates/leaderboard/components/team_info.html
+++ b/applications/leaderboard/templates/leaderboard/components/team_info.html
@@ -25,7 +25,7 @@
                     </div>
                  </div>
             </td>
-            <td class="collapsing">[[ (team.formated_time/60).toFixed(0) ]]([[ team.penalties ]])</td>
+            <td class="collapsing" :title="team.formated_time">[[ (team.formated_time/60).toFixed(0) ]]([[ team.penalties ]])</td>
         </tr>
         `
     })
